--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 1.1.3
 commit = True
-message = progminer {new_version}
+message = kawpowminer {new_version}
 
 	Bump version: {current_version} → {new_version}
 tag = True
