--- a/libpoolprotocols/CMakeLists.txt
+++ b/libpoolprotocols/CMakeLists.txt
@@ -4,6 +4,9 @@ set(SOURCES
 	PoolManager.h PoolManager.cpp
 	testing/SimulateClient.h testing/SimulateClient.cpp
 	stratum/EthStratumClient.h stratum/EthStratumClient.cpp
+	stratum/utilstrencodings.h stratum/utilstrencodings.cpp
+	stratum/uint256.h stratum/uint256.cpp
+	stratum/arith_uint256.h stratum/arith_uint256.cpp
 	getwork/EthGetworkClient.h getwork/EthGetworkClient.cpp
 )
 
