--- a/libethash-cuda/CMakeLists.txt
+++ b/libethash-cuda/CMakeLists.txt
@@ -25,11 +25,24 @@ endif()
 list(APPEND CUDA_NVCC_FLAGS_RELEASE -O3)
 list(APPEND CUDA_NVCC_FLAGS_DEBUG -G)
 
+message("")
+message("----------------------------------------------------------------------------")
+message("-- Detected CUDA Version: ${CUDA_VERSION}")
+if(COMPUTE)
+	message("-- Compute Version: ${COMPUTE}")
+endif()
+message("----------------------------------------------------------------------------")
+message("")
+
 if(COMPUTE AND (COMPUTE GREATER 0))
 	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
 else()
-	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=sm_30")
+	if(CUDA_VERSION VERSION_LESS 11.0)
+		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=sm_30")
+		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_32,code=sm_32")
+	endif()
 	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=sm_35")
+	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_37,code=sm_37")
 	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_50,code=sm_50")
 	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_52,code=sm_52")
 	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_53,code=sm_53")
@@ -38,9 +51,14 @@ else()
 	list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_62,code=sm_62")
 	if(NOT CUDA_VERSION VERSION_LESS 9.0)
 		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_70,code=sm_70")
+		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_72,code=sm_72")
 	endif()
 	if(NOT CUDA_VERSION VERSION_LESS 10.0)
 		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_75,code=sm_75")
+	endif()
+	if(NOT CUDA_VERSION VERSION_LESS 11.0)
+		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_80,code=sm_80")
+		list(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_86,code=sm_86")
 	endif()
 endif()
 
