Massive replace kawpowminer -> firominer

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,15 +52,15 @@ build_script:
   - cmake %CMAKE_ARGS%
   - cmake --build build --config Release --target package
   - ps: |
-      . build/kawpowminer/buildinfo.ps1
+      . build/firominer/buildinfo.ps1
       mkdir bin
       cp C:\CUDA\v$env:CUDA_VER\bin\nvrtc*.dll bin\
-      7z a build/kawpowminer.zip bin\nvrtc*.dll
-      mv build/kawpowminer.zip build/$env:project_name-$env:project_version-cuda$env:CUDA_VER-$env:system_name-$env:system_processor.zip
+      7z a build/firominer.zip bin\nvrtc*.dll
+      mv build/firominer.zip build/$env:project_name-$env:project_version-cuda$env:CUDA_VER-$env:system_name-$env:system_processor.zip
 
 artifacts:
-  - path: build/kawpowminer-*.zip
-    name: kawpowminer
+  - path: build/firominer-*.zip
+    name: firominer
 
 deploy:
   # Create GitHub release, also set the release name and description.
@@ -71,7 +71,7 @@ deploy:
   force_update: true  # Force update in case Travis CI created the release before.
   prerelease: $(project_version_is_prerelease)
   draft: false
-  artifact: kawpowminer
+  artifact: firominer
   auth_token:
     secure: 2Dw6gkb17Y6C0n3YaOX6qlhoDzLt9KeX8kZrLecaSL/ByecnFCbYqBUTZxxW9K4V
   on:
