--- a/kawpowminer/CMakeLists.txt
+++ b/kawpowminer/CMakeLists.txt
@@ -4,19 +4,19 @@ aux_source_directory(. SRC_LIST)
 
 include_directories(BEFORE ..)
 
-set(EXECUTABLE kawpowminer)
+set(EXECUTABLE firominer)
 
 file(GLOB HEADERS "*.h")
 
 add_executable(${EXECUTABLE} ${SRC_LIST} ${HEADERS})
 if(MSVC)
-	target_sources(${EXECUTABLE} PRIVATE kawpowminer.rc)
+	target_sources(${EXECUTABLE} PRIVATE firominer.rc)
 endif()
 
 hunter_add_package(CLI11)
 find_package(CLI11 CONFIG REQUIRED)
 
-target_link_libraries(kawpowminer PRIVATE ethcore poolprotocols devcore kawpowminer-buildinfo CLI11::CLI11 Boost::filesystem Boost::system)
+target_link_libraries(firominer PRIVATE ethcore poolprotocols devcore firominer-buildinfo CLI11::CLI11 Boost::filesystem Boost::system)
 
 if(ETHDBUS)
 	find_package(PkgConfig)
@@ -24,15 +24,15 @@ if(ETHDBUS)
 	pkg_check_modules(DBUS dbus-1)
 	include_directories(${DBUS_INCLUDE_DIRS})
 	link_directories(${DBUS_LIBRARY_DIRS})
-	target_link_libraries(kawpowminer PRIVATE ${DBUS_LIBRARIES})
+	target_link_libraries(firominer PRIVATE ${DBUS_LIBRARIES})
 endif()
 
 if(APICORE)
-	target_link_libraries(kawpowminer PRIVATE apicore)
+	target_link_libraries(firominer PRIVATE apicore)
 endif()
 
 include(GNUInstallDirs)
-install(TARGETS kawpowminer DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(TARGETS firominer DESTINATION ${CMAKE_INSTALL_BINDIR})
 if(MSVC)
-    install(FILES $<TARGET_PDB_FILE:kawpowminer> DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
+    install(FILES $<TARGET_PDB_FILE:firominer> DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
 endif()
