--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,5 @@ jobs:
       - run: cmake -DHUNTER_JOBS_NUMBER=4 -DETHASHCUDA=ON -DAPICORE=ON -H. -Bbuild
       - run: cmake --build build -- -j4
       - store_artifacts:
-          path: build/kawpowminer/kawpowminer
-          destination: kawpowminer
+          path: build/firominer/firominer
+          destination: firominer
