Change ethash::ethash -> crypto

--- a/libethcore/CMakeLists.txt
+++ b/libethcore/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCES
 include_directories(BEFORE ..)
 
 add_library(ethcore ${SOURCES})
-target_link_libraries(ethcore PUBLIC devcore ethash::ethash PRIVATE hwmon)
+target_link_libraries(ethcore PUBLIC devcore crypto PRIVATE hwmon)
 
 if(ETHASHCL)
 	target_link_libraries(ethcore PRIVATE ethash-cl)
